--- a/GummiBearKingdom/Views/Products/Create.cshtml
+++ b/GummiBearKingdom/Views/Products/Create.cshtml
@@ -4,13 +4,17 @@
 
     ViewData["Title"] = "Create new product";
 }
+<div class="vh-100 dt w-100 tc bg-dark-gray " style="background:url(https://www.toptal.com/designers/subtlepatterns/patterns/round.png);">
+<div class="container tc black-70 ">
 
+<h1 class="f1 f-headline-l fw1 i black-70 athelas">Create a product</h1>
 
 <p>
 
 	@using (Html.BeginForm())
 
 	{
+    
 @Html.LabelFor(model => model.Name)
 @Html.EditorFor(model => model.Name)
 @Html.LabelFor(model => model.Cost)
