--- a/GummiBearKingdom/Views/Products/Delete.cshtml
+++ b/GummiBearKingdom/Views/Products/Delete.cshtml
@@ -4,7 +4,11 @@
     ViewData["Title"] = "Delete product";
 }
 
-<h1>Delete @Html.DisplayFor(model => model.Name)</h1>
+<div class="vh-100 dt w-100 tc bg-dark-gray " style="background:url(https://www.toptal.com/designers/subtlepatterns/patterns/round.png);">
+<div class="container tc black-70 ">
+
+<h1 class="f1 f-headline-l fw1 i black-70 athelas">Delete @Html.DisplayFor(model => model.Name)</h1>
+
 
 <h4>Are you sure you want to delete this?</h4>
 
