--- a/GummiBearKingdom/Views/Products/Edit.cshtml
+++ b/GummiBearKingdom/Views/Products/Edit.cshtml
@@ -4,7 +4,12 @@
     ViewData["Title"] = "Edit product";
 }
 
-<h1> Edit @Html.DisplayFor(model => model.Name)</h1>
+<div class="vh-100 dt w-100 tc bg-dark-gray " style="background:url(https://www.toptal.com/designers/subtlepatterns/patterns/round.png);">
+<div class="container tc black-70 ">
+
+<h1 class="f1 f-headline-l fw1 i black-70 athelas">Edit @Html.DisplayFor(model => model.Name)</h1>
+
+
 
 @using (Html.BeginForm())
 {
@@ -20,3 +25,4 @@
 
 }
 
+		<h5>@Html.ActionLink("Go back to product list", "Index")</h5>
