--- a/GummiBearKingdom/Views/Products/Index.cshtml
+++ b/GummiBearKingdom/Views/Products/Index.cshtml
@@ -4,20 +4,45 @@
 @{
 
     ViewData["Title"] = "Products";
+
+  
 }
 
-<h1>Products</h1>
+<div class="vh-100 dt w-100 tc bg-dark-gray " style="background:url(https://www.toptal.com/designers/subtlepatterns/patterns/round.png);">
+<div class="container tc black-70 ">
 
-<ul>
-    @foreach(var product in Model)
-	{
-        <li>
-        @Html.DisplayFor(modelProduct => product.Name)
-		@Html.ActionLink("details", "Details", new { id = product.ProductId})
-	    </li>
+<h1 class="f1 f-headline-l fw1 i black-70 athelas">Products</h1>
+
+	 @foreach(var product in Model)
+    {
+
+<div class="row tc">
+<div class="col-sm-3">
+</div>
+  <div class="col-sm-6 pa3">
+    <div class="card">
+      <div class="card-block">
+        <h3 class="card-title f3">@Html.DisplayFor(modelProduct => product.Name)</h3>
+         
+        <button class="btn btn-default grow">@Html.ActionLink("Details", "Details", new { id = product.ProductId})</button>
+      </div>
+    </div>
+  </div>
+		<div class="col-sm-3">
+</div>
+</div>
+
+
+  
+	    
 	}
 
-</ul>
 
 
 <h5>@Html.ActionLink("Back to welcome page", "Index", "Home")</h5>
+
+</div>
+
+
+
+
