--- a/GummiBearKingdom/wwwroot/css/styles.css
+++ b/GummiBearKingdom/wwwroot/css/styles.css
@@ -134,76 +134,97 @@ a .lh-title  {
 }
 
 
+.ba {
+    border-style: solid;
+    border-width: 1px;
 }
 
-.center-con {
-    display: flex;
-    height: 100vh;
-    align-items: center;
-    justify-content: center;
+.b--black-10 {
+    border-color: rgba(0, 0, 0, .1);
 }
 
-.round {
-    position: relative;
-    border: 3px solid #fff;
-    width: 100px;
-    height: 100px;
-    border-radius: 100%;
+.db {
+    display: block;
 }
 
-span {
-    z-index: 999;
-    height: 3px;
-    margin: 1px;
-    width: 30px;
-    background: #fff;
-    transition: 0.4s ease;
+.lh-copy {
+    line-height: 1.5;
 }
 
-    span:first-child {
-        display: block;
-        position: absolute;
-        transform: rotate(45deg);
-        left: 25%;
-        bottom: 35%;
+.link {
+    text-decoration: none;
+    transition: color .15s ease-in;
+}
+
+    .link:link, .link:visited {
+        transition: color .15s ease-in;
     }
 
-    span:nth-child(2) {
-        display: block;
-        position: absolute;
-        transform: rotate(-45deg);
-        left: 45%;
-        bottom: 35%;
+    .link:hover {
+        transition: color .15s ease-in;
     }
 
-    span:nth-child(3) {
-        display: block;
-        position: absolute;
-        transform: rotate(45deg);
-        left: 25%;
-        bottom: 54%;
+    .link:active {
+        transition: color .15s ease-in;
     }
 
-    span:nth-child(4) {
-        display: block;
-        position: absolute;
-        transform: rotate(-45deg);
-        left: 45%;
-        bottom: 54%;
+    .link:focus {
+        transition: color .15s ease-in;
+        outline: 1px dotted currentColor;
     }
 
-.round:hover span:nth-child(1) {
-    transform: rotate(-135deg);
+.mw5 {
+    max-width: 16rem;
 }
 
-.round:hover span:nth-child(2) {
-    transform: rotate(135deg);
+.black {
+    color: #000;
 }
 
-.round:hover span:nth-child(3) {
-    transform: rotate(225deg);
+.gray {
+    color: #777;
 }
 
-.round:hover span:nth-child(4) {
-    transform: rotate(-225deg);
+.ml0 {
+    margin-left: 0;
 }
+
+.mt2 {
+    margin-top: .5rem;
+}
+
+.tc {
+    text-align: center;
+}
+
+.f6 {
+    font-size: .875rem;
+}
+
+.center {
+    margin-right: auto;
+    margin-left: auto;
+}
+
+.clip {
+    position: fixed !important;
+    _position: absolute !important;
+    clip: rect(1px 1px 1px 1px);
+    clip: rect(1px, 1px, 1px, 1px);
+}
+
+.dim {
+    opacity: 1;
+    transition: opacity .15s ease-in;
+}
+
+    .dim:hover, .dim:focus {
+        opacity: .5;
+        transition: opacity .15s ease-in;
+    }
+
+    .dim:active {
+        opacity: .8;
+        transition: opacity .15s ease-out;
+    }
+
