add more styling to form.

--- a/GummiBearKingdom/Views/Products/Delete.cshtml
+++ b/GummiBearKingdom/Views/Products/Delete.cshtml
@@ -17,4 +17,4 @@
     <input type="submit" value="Delete" />
 }
 
-<h5>@Html.ActionLink("Go back to product list", "Index")</h5>
+<h5>@Html.ActionLink("Back to product list", "Index")</h5>
