--- a/GummiBearKingdom/Views/Products/Details.cshtml
+++ b/GummiBearKingdom/Views/Products/Details.cshtml
@@ -27,6 +27,10 @@
 <h3>Country of Origin: @Html.DisplayFor(model => model.CountryOfOrigin)</h3>
 <h3>Cost: $@Html.DisplayFor(model => model.Cost)</h3>
 
+		<br>
+
+<h5>@Html.ActionLink("Back to product list", "Index")</h5>
+
 
 
 
