--- a/GummiBearKingdom/Views/Home/Index.cshtml
+++ b/GummiBearKingdom/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
 				<br>
   
         <p class="fw1 white">
-          "Life is like a gummy bear, you never know what color you'll get"
+          "Once a Gummi Bear, always a Gummi Bear!"
         </p>
 				
       </blockquote>
